test/regress/coverage-value-cc-arith-errors.test
; Test value.cc: arithmetic operator error/throw paths
; Exercises type mismatch throws in operator+=, *=, /=

; Test AMOUNT + BOOLEAN error (operator+= AMOUNT default path, )
test eval "1 + true" -> 1
__ERROR__
While evaluating value expression:
  (1 + true)
  ^^^^^^^^^^
While adding 1 to 1:
Error: Cannot add a boolean to an amount
end test

; Test AMOUNT * BOOLEAN error (operator*= AMOUNT default, )
test eval "5 * true" -> 1
__ERROR__
While evaluating value expression:
  (5 * true)
  ^^^^^^^^^^
While multiplying 1 with 5:
Error: Cannot multiply an amount with a boolean
end test

; Test AMOUNT / STRING error (operator/= AMOUNT default, )
test eval "5 / \"text\"" -> 1
__ERROR__
While evaluating value expression:
  (5 / "text")
  ^^^^^^^^^^^^
While dividing 5 by text:
Error: Cannot divide an amount by a string
end test

; Test STRING - AMOUNT error (operator-= default, )
test eval "\"text\" - 5" -> 1
__ERROR__
While evaluating value expression:
  ("text" - 5)
  ^^^^^^^^^^^^
While subtracting 5 from text:
Error: Cannot subtract an amount from a string
end test
